# phone_data

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_EN.md  build-start.sh  build.sh  config.toml  docker-build-push.sh  readme.md
.github/workflows/: docker-publish.yml
benches/: algorithm_comparison.rs  lookup_performance.rs
src/: binary_search.rs  common.rs  config.rs  lib.rs  main.rs  phone_bloom.rs  phone_hash.rs  phone_simd.rs
tests/: demo_test.rs  integration_tests.rs  test_suite.rs  unified_tests.rs
